--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "lsd-components": "^1.0.4",
+    "componentsjs": "^2.0.0",
     "remark": "^8.0.0",
     "remark-html": "^6.0.1"
   }
