Add documentation on config compilation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ pages:
     - Loader: 'loading/loader.md'
     - Registration: 'loading/registration.md'
     - Instantiation: 'loading/instantiation.md'
+  - Compilation: 'compilation.md'
   - Example: 'example.md'
 
 site_name: Components.js Documentation
