--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "lsd:module": "https://linkedsoftwaredependencies.org/bundles/npm/documentation-components",
   "lsd:components": "components/components.jsonld",
   "lsd:contexts": {
-    "https://linkedsoftwaredependencies.org/contexts/documentation-components.jsonld": "components/context.jsonld"
+    "https://linkedsoftwaredependencies.org/bundles/npm/documentation-components/^1.0.0/components/context.jsonld": "components/context.jsonld"
+  },
+  "lsd:importPaths": {
+    "https://linkedsoftwaredependencies.org/bundles/npm/documentation-components/^1.0.0/components/": "components/"
   },
   "bin": {
     "serve": "./bin/serve.js"
@@ -16,7 +19,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "componentsjs": "^2.0.0",
+    "componentsjs": "^3.0.0",
     "remark": "^8.0.0",
     "remark-html": "^6.0.1"
   }
