Mention alternative syntax & Fix missing context & Add doc context lookup
- Mention alternative syntax for giving parameters
- Fix missing context in Workflow for TypeScript
- Add document for context lookup

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ pages:
         - Workflow JavaScript: 'getting_started/basics/workflow_js.md'
         - Exposing Components: 'getting_started/basics/exposing_components.md'
         - Config Serializations: 'getting_started/basics/config_serializations.md'
+        - Context lookup: 'getting_started/basics/contexts.md'
   - Configuration:
     - General: 'configuration/general.md'
     - Modules: 'configuration/modules.md'
